# svgo

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md
.github/workflows/: build.yml  clippy.yml  fmt.yml  pages.yml  release.yml  test.yml
crates/svgo/: Cargo.toml
crates/svgo/src/: lib.rs
crates/svgo/src/optimizer/: mod.rs
crates/svgo/src/optimizer/optimization/: mod.rs  remove_comments.rs  remove_doctype.rs
crates/svgo/src/svg/: mod.rs  node.rs  parser.rs  writer.rs
crates/svgo/src/svg/node/: mod.rs
crates/test/: Cargo.toml
crates/test/src/: lib.rs  node.rs  parser.rs
crates/web/: Cargo.toml
crates/web/public/: index.html  styles.css
crates/web/src/: lib.rs
src/: lib.rs
src/optimize/: mod.rs  remove_comments.rs  remove_doctype.rs
src/optimizer/: mod.rs
src/optimizer/optimization/: mod.rs  remove_comments.rs
src/svg/: mod.rs  node.rs  parser.rs  writer.rs
