[workspace]
members = [
    "crates/svgo",
    "crates/test",
    "crates/web"
]
default-members = ["crates/svgo"]
resolver = "1"

[workspace.dependencies]
anyhow = "1.0.86"
clap = "4.5.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
leptos = "0.6"
leptos_meta = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = "0.3"
xml-rs = "0.8.22"

# Local Crates
svgo = { path = "./crates/svgo" }
