[package]
name = "svgo"
version = "0.0.1"
edition = "2021"
description = "SVG Optimizer for Rust"
categories = ["command-line-utilities", "web-programming"]
homepage = "https://github.com/EstebanBorai/svgo"
repository = "https://github.com/EstebanBorai/svgo"
readme = "../../README.md"
keywords = ["svg", "cli", "wasm", "optimizer", "svgo"]
license = "MIT OR Apache-2.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]

[lib]
name = "svgo"
path = "src/lib.rs"

[[bin]]
name = "svgo"
path = "src/bin/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["std", "derive", "env"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
xml-rs = { workspace = true }
