[package]
name = "web"
version = "0.0.1"
edition = "2021"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
publish = false
description = "GitHub Page for SVGO Crate"
license = "MIT"

[lib]
name = "web"
path = "src/lib.rs"

[[bin]]
name = "svgo-web"
path = "src/bin/main.rs"

[dependencies]
leptos = { workspace = true, features = ["csr"] }
leptos_meta = { workspace = true, features = ["csr"] }

# Local Dependencies
svgo = { workspace = true }

[dev-dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-test = { workspace = true }
web-sys = { workspace = true }
